EDITORIALS: REWARDS LP top full width banner was indexed over top the main site nav drop-down menu. Changed to z-index of 0 to correct.

--- a/editorials/328-2023-08-08-loyalty-landing-page/src/scss/layout/_banners.scss
+++ b/editorials/328-2023-08-08-loyalty-landing-page/src/scss/layout/_banners.scss
@@ -8,6 +8,7 @@
     &--full {
       background-color: $hbc-blue;
       padding: 1.25rem 0;
+      z-index: 0;
 
       @include flex(row, nowrap, center, center);
     }
